2008-06-01  Jeffrey Stedfast  <fejj@novell.com>

	* gmime/gmime-part.c: Updated for GMimeFilterCRLF changes.

	* gmime/gmime-multipart-signed.c: Updated for GMimeFilterCRLF
	changes.

	* gmime/gmime-multipart-encrypted.c: Updated for GMimeFilterCRLF
	changes.

	* gmime/gmime-filter-crlf.c (g_mime_filter_crlf_new): No longer
	takes 2 enum arguments, rather it now takes 2 bool arguments which
	makes the API simpler to understand.

	* gmime/gmime-filter-best.c (g_mime_filter_best_new): Changed the
	unsigned int flags argument to be an enum so developers could more
	easily figure out what the argument was.

	* gmime/gmime-param.c (g_mime_param_next): New helper function for
	bindings.
	(g_mime_param_get_name): Same.
	(g_mime_param_get_value): Same.

2008-05-31  Jeffrey Stedfast  <fejj@novell.com>

	* tests/test-html.c (main): Updated.

	* tests/test-best.c (main): Updated.

	* src/uuencode.c (uuencode): Updated.

	* gmime/gmime-part.c: Updated for filter stream change.

	* gmime/gmime-multipart-signed.c (g_mime_multipart_signed_sign):
	Updated for filter stream change.

	* gmime/gmime-multipart-encrypted.c: Updated for filter stream
	change.

	* gmime/gmime-gpg-context.c (gpg_ctx_new): Updated for filter
	stream change.

	* gmime/gmime-filter-yenc.c (g_mime_filter_yenc_new): Now takes a
	bool encode argument rather than a GMimeFilterYencDirection - no
	sense making this more complicated than it needs to be.

	* gmime/gmime-stream-filter.c (g_mime_stream_filter_new): Renamed
	from g_mime_stream_filter_new_with_stream(). This is the only
	constructor, so should be named _new().

2008-05-31  Jeffrey Stedfast  <fejj@novell.com>

	* README: Bumped version

	* configure.in: Bumped version to 2.3.1

	* gmime/gmime-header.c (g_mime_header_list_invalidate_iters): Only
	unlink the iter if the headers are being destroyed.

	* gmime/gmime-gpg-context.c: Updated.

	* gmime/gmime-cipher-context.c: Added GMimeCipherHash enums for
	SHA-224, SHA-256, SHA-384 and SHA-512.